@@ -7,19 +7,54 @@
   <parent>
     <groupId>com.impactupgrade</groupId>
     <artifactId>hub-parent</artifactId>
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.0.8.Final</version>
   </parent>
 
   <artifactId>hub-common</artifactId>
-  <version>3.1.0-SNAPSHOT</version>
+  <version>3.1.2-SNAPSHOT</version>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.impactupgrade.integration</groupId>
-      <artifactId>hubspot-java-client</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
-    </dependency>
-  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>test-jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
+  <profiles>
+    <profile>
+      <id>it</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>2.22.2</version>
+            <configuration>
+              <argLine>--enable-preview</argLine>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <!--
       Using https://gitlab.com/impact-upgrade/maven-repo as a private repo. Assumes you have the following in your ~/.m2/settings.xml:
